--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,9 +1,9 @@
 #spring数据库配置
 ### spring JDBC MYSQL-testmanage
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://172.18.7.160:3306/sp_test_manage_bt?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
+jdbc.url=jdbc:mysql://localhost:3306/sp_test_manage_bt?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
 jdbc.username=root
-jdbc.password=zfxmz123
+jdbc.password=123456
 
 ### spring JDBC MYSQL-testmanage
 jdbc.anlidriver=com.mysql.jdbc.Driver
