--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -36,6 +36,12 @@ jdbc.orclpassword=123456
 #jdbc.orclusername=CFDI_ADMIN
 #jdbc.orclpassword=123
 
+#pass-windows DATA SQLSERVER 导数据
+sqlserverurl=jdbc:sqlserver://172.18.7.92;databaseName=PASSPA2DB
+sqlservername=sa
+sqlserverpassword=123
+sqlserverdriver=com.microsoft.sqlserver.jdbc.SQLServerDriver
+hiscode=1712PASS
 
 ###redis-addr
 redis.ip=172.18.7.160
