--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,21 +1,27 @@
 #spring数据库配置
-### spring JDBC MYSQL-testmanage
+### spring JDBC MYSQL-testmanage 本系统自用数据库
 jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://172.18.7.160:3306/sp_test_manage_bt?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
 jdbc.username=root
 jdbc.password=zfxmz123
 
-### spring JDBC MYSQL-testmanage
-jdbc.anlidriver=com.mysql.jdbc.Driver
-jdbc.anliurl=jdbc:mysql://172.18.7.160:3306/pass_java_anli?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
-jdbc.anliusername=root
-jdbc.anlipassword=zfxmz123
+### spring JDBC MYSQL-testmanage 
+#jdbc.anlidriver=com.mysql.jdbc.Driver
+#jdbc.anliurl=jdbc:mysql://172.18.7.160:3306/pass_java_anli?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
+#jdbc.anliusername=root
+#jdbc.anlipassword=zfxmz123
 
 ### spring JDBC MYSQL-passpa2db
-jdbc.pa2dbdriver=com.mysql.jdbc.Driver
-jdbc.pa2dburl=jdbc:mysql://172.18.7.160:3306/passpa2db_1609_rh_v5?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
-jdbc.pa2dbusername=root
-jdbc.pa2dbpassword=zfxmz123
+#jdbc.pa2dbdriver=com.mysql.jdbc.Driver
+#jdbc.pa2dburl=jdbc:mysql://172.18.7.160:3306/passpa2db_1609_rh_v5?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
+#jdbc.pa2dbusername=root
+#jdbc.pa2dbpassword=zfxmz123
+
+### spring JDBC sqlserver-mcdex 
+jdbc.sqlserversqlserver=com.microsoft.sqlserver.jdbc.SQLServerDriver
+jdbc.sqlserverurl=jdbc:sqlserver://172.18.7.154;databaseName=mcdex_his
+jdbc.sqlserverusername=sa
+jdbc.sqlserverpassword=123
 
 ### spring JDBC ORACLE-pa
 jdbc.orcldriver=oracle.jdbc.driver.OracleDriver
@@ -36,7 +42,7 @@ jdbc.orclpassword=123456
 #jdbc.orclusername=CFDI_ADMIN
 #jdbc.orclpassword=123
 
-#pass-windows DATA SQLSERVER 导数据
+#pass-windows DATA SQLSERVER 导PASS案例数据
 sqlserverurl=jdbc:sqlserver://172.18.7.92;databaseName=PASSPA2DB
 sqlservername=sa
 sqlserverpassword=123
